--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@contentful/rich-text-html-renderer": "^15.11.1",
     "@fontsource/dm-mono": "^4.5.9",
     "@fontsource/dm-sans": "^4.5.8",
+    "@popperjs/core": "^2.6.0",
     "@vanilla-extract/babel-plugin": "^1.2.0",
     "@vanilla-extract/css": "^1.9.0",
     "@vanilla-extract/css-utils": "^0.1.2",
     "@vanilla-extract/webpack-plugin": "^2.1.12",
+    "bootstrap": "^5.0.0-beta1",
     "gatsby": "^4.23.1",
     "gatsby-plugin-image": "^2.23.1",
+    "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-manifest": "^4.6.0",
     "gatsby-plugin-react-helmet": "^5.5.0",
     "gatsby-plugin-sharp": "^4.23.1",
